<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.BookDetailFragment">

    <data>
        <variable
            name="model"
            type="com.example.ecproject.ui.viewmodel.BookDetailFragmentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">

            <View
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/tab_bar_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/tab_bar_img"
                app:layout_constraintBottom_toBottomOf="@id/top_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/top_bar_seperator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_bar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/tab_bar_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tab_bar_img">

                <ImageView
                    android:id="@+id/left_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/left_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/left_arrow"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/title_about_the_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/about_the_book"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_bar_seperator" />

            <androidx.cardview.widget.CardView
                android:id="@+id/inner_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_about_the_book">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:padding="20dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/book_cover_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/book_cover"
                            android:layout_width="120dp"
                            android:layout_height="190dp"
                            android:scaleType="fitXY"
                            tools:src="@tools:sample/avatars"
                            loadImage="@{model.bookData.bookImage}"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_add_to_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="@{() -> model.toggleFavorite()}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/book_cover_container">

                        <TextView
                            android:id="@+id/text_add_to_favorites"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_to_favorites"
                            android:textColor="@color/grey"
                            setFavoriteText="@{model.bookData.isFavorite()}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/underline_text"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="-2dp"
                            android:background="@color/grey"
                            app:layout_constraintEnd_toEndOf="@id/text_add_to_favorites"
                            app:layout_constraintStart_toStartOf="@id/text_add_to_favorites"
                            app:layout_constraintTop_toBottomOf="@id/text_add_to_favorites" />

                        <ImageView
                            android:id="@+id/img_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            setFavorite="@{model.bookData.isFavorite()}"
                            android:src="@drawable/star_solid_empty"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/text_add_to_favorites"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/text_title_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/title"
                        android:textColor="@color/grey"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_add_to_favorite"/>

                    <TextView
                        android:id="@+id/text_title_body"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        tools:text="@string/title"
                        android:text="@{model.bookData.title}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:ellipsize="end"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_title_header" />

                    <View
                        android:id="@+id/title_seperator"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_title_body" />

                    <TextView
                        android:id="@+id/text_author_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/author"
                        android:textColor="@color/grey"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_seperator" />

                    <TextView
                        android:id="@+id/text_author_body"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        tools:text="@string/author"
                        android:text="@{model.bookData.author}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:ellipsize="end"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_author_header" />

                    <View
                        android:id="@+id/author_seperator"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_author_body" />

                    <TextView
                        android:id="@+id/text_rank_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/rankHeader"
                        android:textColor="@color/grey"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/author_seperator" />

                    <TextView
                        android:id="@+id/text_rank_body"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        tools:text="Rank 1"
                        setRank="@{model.bookData.rank}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:ellipsize="end"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_rank_header" />

                    <View
                        android:id="@+id/rank_seperator"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_rank_body" />

                    <TextView
                        android:id="@+id/text_publisher_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/publisher"
                        android:textColor="@color/grey"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rank_seperator" />

                    <TextView
                        android:id="@+id/text_publisher_body"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        tools:text="@string/publisher"
                        android:text="@{model.bookData.publisher}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:ellipsize="end"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_publisher_header" />

                    <View
                        android:id="@+id/publisher_seperator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_publisher_body" />

                    <TextView
                        android:id="@+id/text_desc_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/description"
                        android:textColor="@color/grey"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/publisher_seperator" />

                    <TextView
                        android:id="@+id/text_desc_body"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        tools:text="Test test test Test test test Test test test Test test test Test test test Test test test "
                        android:text="@{model.bookData.description}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_desc_header"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>